Rearranged Wizard Layout

--- a/build.properties
+++ b/build.properties
@@ -3,12 +3,4 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/querydsl-core-2.3.2.jar,\
-               lib/querydsl-sql-2.3.2.jar,\
-               lib/codegen-0.4.7.jar,\
-               lib/slf4j-api-1.6.1.jar,\
-               lib/collections-generic-4.01.jar,\
-               lib/mysema-commons-lang-0.2.2.jar,\
-               lib/javax.inject-1.jar,\
-               lib/commons-lang3-3.0.1.jar,\
-               lib/commons-io-1.4.jar
+               lib/
